--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- google fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   
-    <title>React App</title>
+    <title>Kamil Kasiak</title>
   </head>
   <body>
   
